changes in build.xml&build.properties

--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,15 @@
-src.dir=src/main/java
+src.dir=src/main
 src.test.dir=src/test
 build.dir=build
 dist.dir=dist
 lib.dir=lib
-main.class=src/main/webapp/start.xhtml
+main.class=src/main/webapp
 version=1.0.0
 user=username
 host=hostname
 path=/path
+junit.jar=junit-4.12.jar
+test.dir=test
+junit.output.dir=test-reports
+jar.file=target/weblab3.jar
+
