валидация xml-файлов

--- a/build.properties
+++ b/build.properties
@@ -12,4 +12,5 @@ junit.jar=junit-4.12.jar
 test.dir=test
 junit.output.dir=test-reports
 jar.file=target/weblab3.jar
+svn.repository.url=svn.repository.url
 
