--- a/build.properties
+++ b/build.properties
@@ -1,16 +1,31 @@
-src.dir=src/main
-src.test.dir=src/test
-build.dir=build
-dist.dir=dist
-lib.dir=lib
+dir.src=src/main
+dir.src.test=src/test
+
+dir.build=build
+dir.build.classes=build/classes
+
+dir.dist=dist
+
+dir.lib=lib
+
+dir.test=test
+
+webInf.dir=${dir.src}/webapp/WEB-INF
+
 main.class=src/main/webapp
 version=1.0.0
+
 user=username
 host=hostname
+
 path=/path
+
 junit.jar=junit-4.12.jar
-test.dir=test
 junit.output.dir=test-reports
+
 jar.file=target/weblab3.jar
+war.file=target/weblab3.war
+
 svn.repository.url=svn.repository.url
 
+user.home=C:/Program Files
