--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,9 @@
-dir.src=src/main
+dir.src=src
+src.main = src/main
 dir.src.test=src/test
 
-dir.build=build
-dir.build.classes=build/classes
+build=build
+dir.build.classes=${build}/classes
 
 dir.dist=dist
 
@@ -10,9 +11,9 @@ dir.lib=lib
 
 dir.test=test
 
-webInf.dir=${dir.src}/webapp/WEB-INF
+webInf.dir=src/main/webapp/WEB-INF
 
-main.class=src/main/webapp
+main.class=cs/ifmo/web/lab3/Main
 version=1.0.0
 
 user=username
@@ -23,9 +24,16 @@ path=/path
 junit.jar=junit-4.12.jar
 junit.output.dir=test-reports
 
-jar.file=target/weblab3.jar
-war.file=target/weblab3.war
+jar.file=build/weblab3.jar
+war.file=build/weblab3.war
 
 svn.repository.url=svn.repository.url
 
 user.home=C:/Program Files
+
+remote.username=
+remote.host=
+remote.dir=
+
+zip.file=${dir.build}/team.zip
+
