--- a/ivy.xml
+++ b/ivy.xml
@@ -1,7 +1,8 @@
 <ivy-module version="2.0">
-    <info organisation="your.organisation" module="your.module" />
+    <info organisation="ifmo" module="web.lab3" />
 
-    <dependencies><dependency org="jakarta.faces" name="jakarta.faces-api" rev="4.0.1"/>
+    <dependencies>
+        <dependency org="jakarta.faces" name="jakarta.faces-api" rev="4.0.1"/>
         <dependency org="jakarta.enterprise" name="jakarta.enterprise.cdi-api" rev="4.0.1"/>
         <dependency org="org.primefaces" name="primefaces" rev="13.0.3"/>
         <dependency org="org.eclipse.persistence" name="org.eclipse.persistence.jpa" rev="4.0.0"/>
