--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,7 @@ dir.src.test=src/test
 
 build=build
 dir.build.classes=${build}/classes
+dir.build.tests=${dir.build.classes}/tests
 
 dir.dist=dist
 
