--- a/ivy.xml
+++ b/ivy.xml
@@ -10,5 +10,7 @@
         <dependency org="jakarta.transaction" name="jakarta.transaction-api" rev="2.0.1"/>
         <dependency org="jakarta.ejb" name="jakarta.ejb-api" rev="4.0.1"/>
         <dependency org="org.projectlombok" name="lombok" rev="1.18.32"/>
+        <dependency org="org.junit.jupiter" name="junit-jupiter" rev="5.8.1"/>
+
     </dependencies>
 </ivy-module>
