--- a/build.xml
+++ b/build.xml
@@ -25,8 +25,8 @@
     <target name="init">
         <mkdir dir="${build}"/>
         <mkdir dir="${dir.build.classes}"/>
-        <mkdir dir="${dir.dist}"/>
-        <mkdir dir="${dir.lib}"/>
+        <mkdir dir="${dir.build.tests}"/>
+        <mkdir dir="${junit.output.dir}"/>
     </target>
 
     <!-- Цель для компиляции (done)-->
@@ -68,27 +68,11 @@
     </target>
 
     <!-- Цель для компиляции тестов (done)-->
-    <target name="compile-tests" depends="init,resolve">
+    <target name="compile-tests" depends="init,compile">
         <javac srcdir="${dir.src.test}" destdir="${dir.build.classes}" classpathref="compile.path" includeantruntime="false"/>
     </target>
 
-    <!-- Цель для тестирования (todo: не работает)-->
-<!--    <target name="test" depends="build, compile-tests">-->
-<!--        <mkdir dir="${junit.output.dir}"/>-->
-<!--        <junit printsummary="yes" haltonfailure="yes" showoutput="yes">-->
-<!--            <formatter type="xml"/>-->
-<!--            <classpath>-->
-<!--                <pathelement location="${jar.file}"/>-->
-<!--                <pathelement location="${junit.jar}"/>-->
-<!--            </classpath>-->
-<!--            <batchtest todir="${junit.output.dir}" fork="yes">-->
-<!--                <fileset dir="${dir.src.test}">-->
-<!--                    <include name="**/*Test*.java"/>-->
-<!--                </fileset>-->
-<!--            </batchtest>-->
-<!--        </junit>-->
-<!--    </target>-->
-
+    <!-- Цель для тестирования (done)-->
     <target name="test" depends="compile-tests">
         <junitlauncher>
             <classpath>
