--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ dir.src.test=src/test
 build=build
 dir.build.classes=${build}/classes
 dir.build.tests=${dir.build.classes}/tests
+dir.build.team=${build}/team
 
 dir.dist=dist
 
@@ -28,7 +29,6 @@ junit.output.dir=test-reports
 jar.file=build/weblab3.jar
 war.file=build/weblab3.war
 
-svn.repository.url=svn.repository.url
 
 user.home=C:/Program Files
 
@@ -36,10 +36,17 @@ remote.username=
 remote.host=
 remote.dir=
 
-zip.file=${dir.build}/team.zip
+zip.file=${build}/team.zip
 
 scp.user=s367595
 scp.host=se.ifmo.ru
 scp.port=2222
 scp.dir=
+
+svn.username=horobryhd
+svn.password=
+svn.repository.url=https://eu-subversion.assembla.com/svn/lab3-opi^lab3-opi.mainRepo/
+commit.message=checkSvn
+svn.executable=
+
 
