last commit (надеюсь 🥲)

--- a/build.properties
+++ b/build.properties
@@ -48,5 +48,5 @@ svn.password=
 svn.repository.url=https://eu-subversion.assembla.com/svn/lab3-opi^lab3-opi.mainRepo/
 commit.message=checkSvn
 svn.executable=
-
+svn.names=Main
 
